--- a/index.html
+++ b/index.html
@@ -4,131 +4,110 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FA-Tshirt</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <title>FA-Tshirt - Full Website</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
-            background: #f4f4f4;
+            font-family: Arial, sans-serif;
         }
 
         header {
-            background: #000;
-            color: #fff;
-            padding: 10px 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            background-color: #000;
+            color: #fff;
+            padding: 10px 20px;
         }
 
-        header .logo {
+        .logo {
             display: flex;
+            flex-direction: column;
             align-items: center;
         }
 
-        header .logo img {
-            height: 40px;
-            margin-right: 10px;
+        .logo img {
+            width: 40px;
         }
 
-        header .search-bar input {
-            padding: 5px;
-            width: 300px;
-            border-radius: 4px;
+        .search-bar {
+            flex: 1;
+            margin: 0 20px;
+        }
+
+        .search-bar input {
+            width: 100%;
+            padding: 8px;
+            border-radius: 5px;
             border: none;
         }
 
-        header .menu-buttons button {
-            margin-left: 10px;
-            padding: 5px 10px;
-            border: none;
-            background: red;
+        .cart-btn {
+            background-color: red;
             color: white;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 5px;
             cursor: pointer;
         }
 
-        nav {
-            background: #333;
-            color: #fff;
-            padding: 10px;
-            display: flex;
-            flex-direction: column;
+        .sidebar {
+            width: 200px;
+            background-color: #f4f4f4;
+            height: 100vh;
+            padding: 20px;
+            box-sizing: border-box;
             position: fixed;
             right: 0;
             top: 60px;
-            width: 150px;
         }
 
-        nav a {
-            color: white;
+        .sidebar a {
+            display: block;
+            margin-bottom: 15px;
+            color: #333;
             text-decoration: none;
-            margin: 5px 0;
+            font-weight: bold;
         }
 
-        .container {
-            margin-right: 160px;
+        .main-content {
+            margin-right: 220px;
             padding: 20px;
         }
 
         .product {
+            border: 1px solid #ddd;
+            padding: 10px;
+            margin-bottom: 20px;
             display: flex;
-            flex-wrap: wrap;
             gap: 20px;
         }
 
-        .card {
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            padding: 15px;
-            width: 250px;
-            position: relative;
+        .product img {
+            width: 150px;
+            height: auto;
         }
 
-        .card img {
-            width: 100%;
-            border-radius: 10px;
+        .product-info {
+            flex: 1;
         }
 
-        .card h3 {
-            margin: 10px 0 5px;
-        }
-
-        .card .price {
-            color: green;
-        }
-
-        .card .desc {
-            font-size: 14px;
-            color: #555;
-        }
-
-        .card select, .card button {
+        select, button {
             margin-top: 10px;
-            width: 100%;
-            padding: 8px;
-            font-size: 14px;
         }
 
-        .cart-section, .checkout-section {
-            margin-top: 40px;
+        #cart, #checkout {
+            display: none;
+            padding: 20px;
+            background: #f9f9f9;
+            border: 1px solid #ddd;
         }
 
-        .checkout-section input {
+        #checkout input, #checkout textarea {
             display: block;
+            width: 100%;
             margin: 10px 0;
             padding: 8px;
-            width: 300px;
-        }
-
-        .checkout-section button {
-            background: green;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            cursor: pointer;
         }
     </style>
 </head>
@@ -137,139 +116,106 @@
     <header>
         <div class="logo">
             <img src="https://via.placeholder.com/40" alt="FA-Tshirt Logo">
-            <div>FA-Tshirt</div>
+            <small>FA-Tshirt</small>
         </div>
         <div class="search-bar">
-            <input type="text" placeholder="Search for t-shirts...">
+            <input type="text" placeholder="Search for products...">
         </div>
-        <div class="menu-buttons">
-            <button onclick="toggleCart()">Cart (<span id="cartCount">0</span>)</button>
-        </div>
+        <button class="cart-btn" onclick="toggleCart()">Cart (<span id="cart-count">0</span>)</button>
     </header>
 
-    <nav>
+    <div class="sidebar">
         <a href="#">Men</a>
         <a href="#">Women</a>
         <a href="#">New Arrivals</a>
         <a href="#">Sale</a>
-    </nav>
+    </div>
 
-    <div class="container">
-        <div class="product" id="productList"></div>
-
-        <div class="cart-section" id="cartSection" style="display:none;">
-            <h2>Your Cart</h2>
-            <ul id="cartItems"></ul>
+    <div class="main-content">
+        <div id="product-list">
+            <div class="product">
+                <img src="https://via.placeholder.com/150" alt="Product 1">
+                <div class="product-info">
+                    <h3>Classic Black T-shirt</h3>
+                    <p>Premium cotton, unisex fit</p>
+                    <p><b>Price:</b> ₹299</p>
+                    <label for="size1">Size:</label>
+                    <select id="size1">
+                        <option>S</option>
+                        <option>M</option>
+                        <option>L</option>
+                        <option>XL</option>
+                    </select>
+                    <br>
+                    <button onclick="addToCart('Classic Black T-shirt', 299)">Add to Cart</button>
+                    <button onclick="buyNow('Classic Black T-shirt', 299)">Buy Now</button>
+                </div>
+            </div>
+            <!-- Add more products here -->
         </div>
 
-        <div class="checkout-section" id="checkoutSection" style="display:none;">
+        <div id="cart">
+            <h2>Shopping Cart</h2>
+            <ul id="cart-items"></ul>
+            <p><strong>Total:</strong> ₹<span id="cart-total">0</span></p>
+            <button onclick="checkout()">Proceed to Checkout</button>
+        </div>
+
+        <div id="checkout">
             <h2>Checkout</h2>
-            <input type="text" id="name" placeholder="Full Name">
-            <input type="text" id="address" placeholder="Delivery Address">
-            <input type="text" id="mobile" placeholder="Mobile Number">
+            <input type="text" placeholder="Full Name">
+            <textarea placeholder="Shipping Address"></textarea>
+            <input type="tel" placeholder="Mobile Number">
             <button onclick="placeOrder()">Place Order</button>
         </div>
     </div>
 
     <script>
-        const products = [
-            {
-                id: 1,
-                name: "Classic Black T-shirt",
-                price: 299,
-                image: "https://via.placeholder.com/250",
-                desc: "Premium cotton, round neck, stylish fit.",
-                stock: 5
-            },
-            {
-                id: 2,
-                name: "Bold Red Graphic Tee",
-                price: 279,
-                image: "https://via.placeholder.com/250",
-                desc: "Trendy graphic print, breathable fabric.",
-                stock: 3
-            }
-        ];
-
-        const cart = [];
-
-        function renderProducts() {
-            const container = document.getElementById('productList');
-            container.innerHTML = '';
-            products.forEach(p => {
-                container.innerHTML += `
-                <div class="card">
-                    <img src="${p.image}" alt="${p.name}">
-                    <h3>${p.name}</h3>
-                    <p class="price">₹${p.price}</p>
-                    <p class="desc">${p.desc}</p>
-                    <p>Stock: ${p.stock}</p>
-                    <select id="size-${p.id}">
-                        <option value="S">S</option>
-                        <option value="M">M</option>
-                        <option value="L">L</option>
-                        <option value="XL">XL</option>
-                    </select>
-                    <button onclick="addToCart(${p.id})">Add to Cart</button>
-                    <button onclick="buyNow(${p.id})">Buy Now</button>
-                </div>`;
-            });
-        }
-
-        function addToCart(id) {
-            const product = products.find(p => p.id === id);
-            if (product.stock <= 0) return alert("Out of stock!");
-            cart.push(product);
-            product.stock--;
-            updateCart();
-            renderProducts();
-        }
-
-        function updateCart() {
-            document.getElementById('cartCount').innerText = cart.length;
-            const list = document.getElementById('cartItems');
-            list.innerHTML = '';
-            cart.forEach((item, i) => {
-                list.innerHTML += `<li>${item.name} - ₹${item.price}</li>`;
-            });
-        }
+        let cart = [];
 
         function toggleCart() {
-            const sec = document.getElementById('cartSection');
-            sec.style.display = sec.style.display === 'none' ? 'block' : 'none';
-            document.getElementById('checkoutSection').style.display = 'none';
+            const cartDiv = document.getElementById('cart');
+            const checkoutDiv = document.getElementById('checkout');
+            cartDiv.style.display = cartDiv.style.display === 'block' ? 'none' : 'block';
+            checkoutDiv.style.display = 'none';
         }
 
-        function buyNow(id) {
-            const product = products.find(p => p.id === id);
-            if (product.stock <= 0) return alert("Out of stock!");
-            cart.length = 0;
-            cart.push(product);
-            product.stock--;
-            updateCart();
-            document.getElementById('cartSection').style.display = 'block';
-            document.getElementById('checkoutSection').style.display = 'block';
+        function addToCart(productName, price) {
+            cart.push({ name: productName, price: price });
+            updateCartUI();
+        }
+
+        function buyNow(productName, price) {
+            cart = [{ name: productName, price: price }];
+            updateCartUI();
+            checkout();
+        }
+
+        function updateCartUI() {
+            const itemsList = document.getElementById('cart-items');
+            itemsList.innerHTML = '';
+            let total = 0;
+            cart.forEach((item) => {
+                const li = document.createElement('li');
+                li.textContent = `${item.name} - ₹${item.price}`;
+                itemsList.appendChild(li);
+                total += item.price;
+            });
+            document.getElementById('cart-count').textContent = cart.length;
+            document.getElementById('cart-total').textContent = total;
+        }
+
+        function checkout() {
+            document.getElementById('cart').style.display = 'none';
+            document.getElementById('checkout').style.display = 'block';
         }
 
         function placeOrder() {
-            const name = document.getElementById('name').value;
-            const address = document.getElementById('address').value;
-            const mobile = document.getElementById('mobile').value;
-
-            if (!name || !address || !mobile) {
-                alert("Please fill all details");
-                return;
-            }
-
-            alert(`Thank you ${name}, your order of ${cart.length} item(s) has been placed!`);
-            cart.length = 0;
-            updateCart();
-            document.getElementById('checkoutSection').style.display = 'none';
-            document.getElementById('cartSection').style.display = 'none';
-            renderProducts();
+            alert('Order placed successfully!');
+            cart = [];
+            updateCartUI();
+            document.getElementById('checkout').style.display = 'none';
         }
-
-        renderProducts();
     </script>
 </body>
 
