--- a/index.html
+++ b/index.html
@@ -1,222 +1,231 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FA-Tshirt - Full Website</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-
-        header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #000;
-            color: #fff;
-            padding: 10px 20px;
-        }
-
-        .logo {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .logo img {
-            width: 40px;
-        }
-
-        .search-bar {
-            flex: 1;
-            margin: 0 20px;
-        }
-
-        .search-bar input {
-            width: 100%;
-            padding: 8px;
-            border-radius: 5px;
-            border: none;
-        }
-
-        .cart-btn {
-            background-color: red;
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .sidebar {
-            width: 200px;
-            background-color: #f4f4f4;
-            height: 100vh;
-            padding: 20px;
-            box-sizing: border-box;
-            position: fixed;
-            right: 0;
-            top: 60px;
-        }
-
-        .sidebar a {
-            display: block;
-            margin-bottom: 15px;
-            color: #333;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .main-content {
-            margin-right: 220px;
-            padding: 20px;
-        }
-
-        .product {
-            border: 1px solid #ddd;
-            padding: 10px;
-            margin-bottom: 20px;
-            display: flex;
-            gap: 20px;
-        }
-
-        .product img {
-            width: 150px;
-            height: auto;
-        }
-
-        .product-info {
-            flex: 1;
-        }
-
-        select, button {
-            margin-top: 10px;
-        }
-
-        #cart, #checkout {
-            display: none;
-            padding: 20px;
-            background: #f9f9f9;
-            border: 1px solid #ddd;
-        }
-
-        #checkout input, #checkout textarea {
-            display: block;
-            width: 100%;
-            margin: 10px 0;
-            padding: 8px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FA-Tshirt</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, sans-serif;
+    }
+    body {
+      display: flex;
+      min-height: 100vh;
+      background-color: #f5f5f5;
+    }
+    header {
+      position: fixed;
+      top: 0;
+      left: 200px;
+      right: 0;
+      background: #111;
+      color: #fff;
+      padding: 10px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      z-index: 1000;
+    }
+    .logo {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .logo img {
+      width: 40px;
+      height: 40px;
+    }
+    .logo span {
+      font-size: 12px;
+    }
+    .search-box input {
+      width: 400px;
+      padding: 5px 10px;
+      border-radius: 5px;
+      border: none;
+    }
+    .header-right button {
+      background: #e50914;
+      color: #fff;
+      border: none;
+      padding: 8px 12px;
+      margin-left: 10px;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+    nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      width: 200px;
+      background: #333;
+      color: white;
+      padding: 20px 10px;
+      z-index: 1000;
+    }
+    nav h3 {
+      margin-bottom: 20px;
+    }
+    nav ul {
+      list-style: none;
+    }
+    nav ul li {
+      margin: 15px 0;
+      cursor: pointer;
+    }
+    main {
+      margin-left: 200px;
+      margin-top: 60px;
+      padding: 20px;
+      flex: 1;
+    }
+    .product-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+    }
+    .product {
+      background: #fff;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
+    }
+    .product:hover {
+      transform: scale(1.02);
+    }
+    .product img {
+      width: 100%;
+      height: 220px;
+      object-fit: cover;
+    }
+    .product-content {
+      padding: 10px;
+    }
+    .product-content h4 {
+      margin-bottom: 5px;
+      color: #222;
+    }
+    .product-content p {
+      font-size: 14px;
+      margin-bottom: 8px;
+    }
+    .product-content .price {
+      font-weight: bold;
+      color: #e50914;
+    }
+    .product-content button {
+      background: #111;
+      color: #fff;
+      border: none;
+      padding: 8px;
+      border-radius: 5px;
+      cursor: pointer;
+      width: 100%;
+    }
+    /* Detail page & cart placeholder */
+    #detail-page, #cart-page {
+      display: none;
+      margin-top: 20px;
+      background: #fff;
+      padding: 20px;
+      border-radius: 10px;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #111;
+      color: #fff;
+      margin-top: 40px;
+    }
+  </style>
 </head>
-
 <body>
+  <nav>
+    <h3>Categories</h3>
+    <ul>
+      <li>All</li>
+      <li>Men</li>
+      <li>Women</li>
+      <li>Unisex</li>
+    </ul>
+  </nav>
+  <div style="flex: 1;">
     <header>
-        <div class="logo">
-            <img src="https://via.placeholder.com/40" alt="FA-Tshirt Logo">
-            <small>FA-Tshirt</small>
-        </div>
-        <div class="search-bar">
-            <input type="text" placeholder="Search for products...">
-        </div>
-        <button class="cart-btn" onclick="toggleCart()">Cart (<span id="cart-count">0</span>)</button>
+      <div class="logo">
+        <img src="https://via.placeholder.com/40" alt="FA-Tshirt" />
+        <span>FA-Tshirt</span>
+      </div>
+      <div class="search-box">
+        <input type="text" placeholder="Search for products..." />
+      </div>
+      <div class="header-right">
+        <button onclick="showLogin()">Login</button>
+        <button onclick="showCart()">Cart</button>
+      </div>
     </header>
-
-    <div class="sidebar">
-        <a href="#">Men</a>
-        <a href="#">Women</a>
-        <a href="#">New Arrivals</a>
-        <a href="#">Sale</a>
-    </div>
-
-    <div class="main-content">
-        <div id="product-list">
-            <div class="product">
-                <img src="https://via.placeholder.com/150" alt="Product 1">
-                <div class="product-info">
-                    <h3>Classic Black T-shirt</h3>
-                    <p>Premium cotton, unisex fit</p>
-                    <p><b>Price:</b> ₹299</p>
-                    <label for="size1">Size:</label>
-                    <select id="size1">
-                        <option>S</option>
-                        <option>M</option>
-                        <option>L</option>
-                        <option>XL</option>
-                    </select>
-                    <br>
-                    <button onclick="addToCart('Classic Black T-shirt', 299)">Add to Cart</button>
-                    <button onclick="buyNow('Classic Black T-shirt', 299)">Buy Now</button>
-                </div>
+    <main>
+      <section id="product-list">
+        <div class="product-grid">
+          <div class="product" onclick="showDetail('Tshirt 1')">
+            <img src="https://via.placeholder.com/300x220" alt="Tshirt 1">
+            <div class="product-content">
+              <h4>Tshirt 1</h4>
+              <p>Premium cotton, round neck</p>
+              <div class="price">₹299</div>
+              <button>Add to Cart</button>
             </div>
-            <!-- Add more products here -->
+          </div>
+          <div class="product" onclick="showDetail('Tshirt 2')">
+            <img src="https://via.placeholder.com/300x220" alt="Tshirt 2">
+            <div class="product-content">
+              <h4>Tshirt 2</h4>
+              <p>Stylish and comfortable</p>
+              <div class="price">₹279</div>
+              <button>Add to Cart</button>
+            </div>
+          </div>
         </div>
+      </section>
+      <section id="detail-page">
+        <h2>Product Detail</h2>
+        <p>This is where the product details will show when clicked.</p>
+        <button onclick="goBack()">Back</button>
+      </section>
+      <section id="cart-page">
+        <h2>Your Cart</h2>
+        <p>Cart is currently empty.</p>
+        <button onclick="goBack()">Back</button>
+      </section>
+    </main>
+    <footer>
+      &copy; 2025 FA-Tshirt. All rights reserved.
+    </footer>
+  </div>
 
-        <div id="cart">
-            <h2>Shopping Cart</h2>
-            <ul id="cart-items"></ul>
-            <p><strong>Total:</strong> ₹<span id="cart-total">0</span></p>
-            <button onclick="checkout()">Proceed to Checkout</button>
-        </div>
-
-        <div id="checkout">
-            <h2>Checkout</h2>
-            <input type="text" placeholder="Full Name">
-            <textarea placeholder="Shipping Address"></textarea>
-            <input type="tel" placeholder="Mobile Number">
-            <button onclick="placeOrder()">Place Order</button>
-        </div>
-    </div>
-
-    <script>
-        let cart = [];
-
-        function toggleCart() {
-            const cartDiv = document.getElementById('cart');
-            const checkoutDiv = document.getElementById('checkout');
-            cartDiv.style.display = cartDiv.style.display === 'block' ? 'none' : 'block';
-            checkoutDiv.style.display = 'none';
-        }
-
-        function addToCart(productName, price) {
-            cart.push({ name: productName, price: price });
-            updateCartUI();
-        }
-
-        function buyNow(productName, price) {
-            cart = [{ name: productName, price: price }];
-            updateCartUI();
-            checkout();
-        }
-
-        function updateCartUI() {
-            const itemsList = document.getElementById('cart-items');
-            itemsList.innerHTML = '';
-            let total = 0;
-            cart.forEach((item) => {
-                const li = document.createElement('li');
-                li.textContent = `${item.name} - ₹${item.price}`;
-                itemsList.appendChild(li);
-                total += item.price;
-            });
-            document.getElementById('cart-count').textContent = cart.length;
-            document.getElementById('cart-total').textContent = total;
-        }
-
-        function checkout() {
-            document.getElementById('cart').style.display = 'none';
-            document.getElementById('checkout').style.display = 'block';
-        }
-
-        function placeOrder() {
-            alert('Order placed successfully!');
-            cart = [];
-            updateCartUI();
-            document.getElementById('checkout').style.display = 'none';
-        }
-    </script>
+  <script>
+    function showDetail(name) {
+      document.getElementById('product-list').style.display = 'none';
+      document.getElementById('detail-page').style.display = 'block';
+      document.getElementById('cart-page').style.display = 'none';
+    }
+    function showCart() {
+      document.getElementById('product-list').style.display = 'none';
+      document.getElementById('detail-page').style.display = 'none';
+      document.getElementById('cart-page').style.display = 'block';
+    }
+    function goBack() {
+      document.getElementById('product-list').style.display = 'block';
+      document.getElementById('detail-page').style.display = 'none';
+      document.getElementById('cart-page').style.display = 'none';
+    }
+    function showLogin() {
+      alert('Login functionality coming soon!');
+    }
+  </script>
 </body>
-
 </html>
